Remove obsolete launcher command-line API